# tauri-live-player

./: .gitignore  CLAUDE.md  PROJECT_PLAN_v5.md  TECHNICAL_DESIGN.md  package.json  pnpm-lock.yaml
claudedocs/: GSTREAMER_PIPELINE.md  NDI_SDK_REFERENCE.md  PROJECT_PLAN_v5.md  PROJECT_PLAN_v6.md  PROJECT_PLAN_v7.md  TECHNICAL_DESIGN.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/audio/: sink.rs
src-tauri/src/commands/: mod.rs  output.rs  player.rs  project.rs
src-tauri/src/output/: manager.rs  mod.rs  native_handle.rs  standby.rs
src-tauri/src/pipeline/: cue_player.rs  media_handler.rs  mod.rs  ndi_sender.rs  syphon_sender.rs
src-tauri/src/types/: media.rs  mod.rs  output.rs  player.rs  project.rs
src/components/cue/: CueList.tsx
src/components/output/: OutputManager.tsx
src/components/player/: BrightnessPanel.tsx  PlayerControls.tsx  VolumePanel.tsx
src/components/views/: EditView.tsx  PlayView.tsx
src/hooks/: useKeyboard.ts  usePlayerSync.ts
src/lib/: utils.ts
src/stores/: outputStore.ts  playerStore.ts  projectStore.ts
src/types/: index.ts
