[package]
name = "tauri-live-player"
version = "0.1.0"
description = "Live event timecode-synced video playback system"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_live_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

# GStreamer
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-audio = "0.23"
gstreamer-app = "0.23"
gstreamer-pbutils = "0.23"

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies (if needed)

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies (if needed)

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
